# kideyes

./: CMakeLists.txt  README.md
dockerFile/: README.md  hls.conf  hls.dockerfile
src/: CMakeLists.txt  README.md  build_ffmpeg.sh
src/ffmpeg/: CMakeLists.txt  frame_util.cpp  frame_util.hpp
src/ffmpeg/include/libavutil/: ffversion.h
